data/live_cluster/batch_1k/0020_artifacthub_bitnami_redis_001_networkpolicy_release-name-redis.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-redis
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 8.2.2
    helm.sh/chart: redis-23.1.1
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: redis
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  - ports:
    - port: 6379
